--- a/.slugignore
+++ b/.slugignore
@@ -2,9 +2,15 @@ inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
 inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
-attachments/*
-readme_images/*
 README.md
 .gitpod.dockerfile
 .gitpod.yml
 app_pages/__pycache__/*
+jupyter_notebooks/**
+assets
+cloudinary_python.txt
+kaggle.json
+node_modules/
+*.pyc
+*.pyo
+__pycache__/
