--- a/.slugignore
+++ b/.slugignore
@@ -5,3 +5,25 @@
 /inputs/cherry_leaves/cherry-leaves/healthy
 /inputs/cherry_leaves/cherry-leaves/powdery_mildew
 /inputs/cherry_leaves/cherry-leaves/validation/*
+Dockerfile
+.gitpod.yml
+app_pages/__pycache__/*
+jupyter_notebooks/**
+assets
+cloudinary_python.txt
+kaggle.json
+node_modules/
+*.pyc
+*.pyo
+__pycache__/
+.Trash-1000
+*.psd
+*.pdf
+/test
+/spec
+*.zip
+tmp
+* .log
+*.ipynb
+README.md
+build-assets/*
