Amend slug file

--- a/.slugignore
+++ b/.slugignore
@@ -1,29 +1,9 @@
-*.zip
-/inputs/cherry_leaves/cherry-leaves/train/*
 /documentation
-/inputs/cherry_leaves/cherry-leaves/test/*
-/inputs/cherry_leaves/cherry-leaves/healthy
-/inputs/cherry_leaves/cherry-leaves/powdery_mildew
-/inputs/cherry_leaves/cherry-leaves/validation/*
-Dockerfile
-.gitpod.yml
-app_pages/__pycache__/*
-jupyter_notebooks/**
-assets
-cloudinary_python.txt
-kaggle.json
-node_modules/
-*.pyc
-*.pyo
-__pycache__/
-.Trash-1000
+/jupyter_notebooks
+/inputs
+/outputs
+/.github
+/.vscode
+README.md
 *.psd
 *.pdf
-/test
-/spec
-*.zip
-tmp
-* .log
-*.ipynb
-README.md
-build-assets/*
