--- a/.slugignore
+++ b/.slugignore
@@ -9,5 +9,11 @@ README.md
 .Trash-1000
 kaggle.json
 node_modules/
-/test/*
-/train/*
+inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
+inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
+attachments/*
+.gitpod.dockerfile
+.gitpod.yml
+app_pages/__pycache__/*
