reduce file size

--- a/.slugignore
+++ b/.slugignore
@@ -2,18 +2,14 @@
 /jupyter_notebooks
 /inputs
 /.github
+/documentation
+/jupyter_notebooks
+/inputs
+/.github
 /.vscode
 README.md
+app_pages/__pycache__/*
 *.psd
 *.pdf
-.Trash-1000
-kaggle.json
-node_modules/
-inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
-inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
-attachments/*
-.gitpod.dockerfile
-.gitpod.yml
-app_pages/__pycache__/*
+*.zip
+tmp
