adjust slug file size still

--- a/.slugignore
+++ b/.slugignore
@@ -1,13 +1,6 @@
-/jupyter_notebooks
-/inputs
-/jupyter_notebooks
-/inputs
-/.github
-/.vscode
-README.md
-*.psd
-*.pdf
-*.zip
-tmp
-/assets
-/.Trash-1000
+/app/.heroku
+/app/.devcontainer
+/app/assets
+/app/.Trash-1000
+/app/.ipynb_checkpoints
+/app/.theia
