--- a/.slugignore
+++ b/.slugignore
@@ -1,7 +1,6 @@
-inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
-inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
+/jupyter_notebooks
+/inputs
+/.github
+/.vscode
 README.md
-*.pyc
-*.pyo
+app_pages/__pycache__/*
