--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,10 @@
-absl-py==2.1.0
-altair==4.2.2
-astor==0.8.1
-astunparse==1.6.3
-backports.zoneinfo==0.2.1
-base58==2.1.1
-blinker==1.7.0
-cachetools==5.3.2
-clang==5.0
-click==7.1.2
-cycler==0.12.1
-entrypoints==0.4
-flatbuffers==23.5.26
-gast==0.4.0
-google-auth==2.25.2
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.60.0
-h5py==3.1.0
-joblib==1.3.2
-kaggle==1.5.12
-keras==2.13.1
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.5
-libclang==16.0.6
-Markdown==3.5.1
-matplotlib==3.3.1
-numpy==1.23.4
-oauthlib==3.2.2
-opt-einsum==3.3.0
-pandas==2.0.3
-Pillow==9.5.0
-plotly==5.18.0
-protobuf==4.25.2
-pyarrow==14.0.1
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pydeck==0.8.1b0
-pyparsing==3.1.1
-python-slugify==8.0.1
-requests-oauthlib==1.3.1
-retrying==1.3.4
-rsa==4.9
-scikit-learn==0.24.2
-scipy==1.9.3
-seaborn==0.11.0
-six==1.15.0
-streamlit==1.30.0
-tenacity==8.2.3
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow-cpu==2.13.1
-tensorflow-estimator==2.13.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==1.1.0
-text-unidecode==1.3
-threadpoolctl==3.2.0
-toml==0.10.2
-toolz==0.12.0
-tqdm==4.66.1
-typing_extensions==4.5.0
-tzdata==2023.4
-tzlocal==5.2
-validators==0.22.0
-watchdog==3.0.0
-Werkzeug==3.0.1
-wrapt==1.12.1
+numpy
+pandas
+matplotlib
+seaborn
+plotly
+
+streamlit
+
+scikit-learn
+tensorflow-cpu
