Amend slug size

--- a/.slugignore
+++ b/.slugignore
@@ -1,25 +1,21 @@
-/inputs
-README.md
 app_pages/__pycache__/*
-/jupyter_notebooks
-*.ipynb
-/.Trash-1000
+attachments/*
 /assets
+/documentation
+/.devcontainer
+.gitpod.yml
+/.gitignore
 .gitpod.dockerfile
 .gitpod.yml
+.gitpod.dockerfile
+/inputs
+/.ipynb_checkpoints
+/jupyter_notebooks
+kaggle.json
+README.md
 *.psd
 *.pdf
-*.zip
-/documentation
-attachments/*
-.gitpod.dockerfile
-.gitpod.yml
-.Trash-1000
-kaggle.json
-/.gitignore
-assets/streamlit_app_images
-/docker-compose.yml
-/Dockerfile
 /src/__pycache__
-/build-assets
-/.gitignore
+/.theia
+/.Trash-1000
+*.zip
