reorder sluignore content

--- a/.slugignore
+++ b/.slugignore
@@ -1,25 +1,23 @@
-/inputs
-README.md
-app_pages/__pycache__/*
-/jupyter_notebooks
-*.ipynb
-/.Trash-1000
+
 /assets
+attachments/*
+app_pages/__pycache__/*
+assets/streamlit_app_images
+/documentation
+/.devcontainer
 .gitpod.dockerfile
 .gitpod.yml
+.gitpod.yml
+/.gitignore
+/inputs
+*.ipynb
+/.ipynb_checkpoints
+/jupyter_notebooks
+kaggle.json
 *.psd
 *.pdf
-*.zip
-/documentation
-attachments/*
-.gitpod.dockerfile
-.gitpod.yml
-.Trash-1000
-kaggle.json
-/.gitignore
-assets/streamlit_app_images
-/docker-compose.yml
-/Dockerfile
+README.md
 /src/__pycache__
-/build-assets
-/.gitignore
+/.Trash-1000
+/.theia
+*.zip
