--- a/.slugignore
+++ b/.slugignore
@@ -6,16 +6,16 @@ app_pages/__pycache__/*
 cloudinary_python.txt
 /documentation
 /.devcontainer
-env.py
-.gitpod.dockerfile
-.gitpod.yml
+/env.py
+/.gitpod.dockerfile
+/.gitignore
 /.gitignore
 /.github
 /inputs
 *.ipynb
 /.ipynb_checkpoints
 /jupyter_notebooks
-kaggle.json
+/kaggle.json
 node_modules/
 *.psd
 *.pdf
