--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ cloudinary_python.txt
 kaggle.json
 inputs/cherryleaves_dataset/cherry-leaves/train
 inputs/cherryleaves_dataset/cherry-leaves/test
+log
+tmp
