--- a/.slugignore
+++ b/.slugignore
@@ -30,3 +30,10 @@ node_modules/
 tmp
 /.vscode
 *.zip
+/.slugignore
+./inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew
+./inputs/cherryleaves_dataset/cherry-leaves/test/healthy
+./inputs/cherryleaves_dataset/cherry-leaves/test
+ ./inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew
+ ./inputs/cherryleaves_dataset/cherry-leaves/train/healthy
+ ./inputs/cherryleaves_dataset/cherry-leaves/train
