--- a/.slugignore
+++ b/.slugignore
@@ -1,19 +1,16 @@
 # cat .slugignore
 /assets
-attachments/*
 /app_pages/__pycache__/*
 /assets
 /cloudinary_python.txt
 /documentation
 ./.devcontainer
-./.devcontainer/build-assets
-/env.py
 /.gitpod.dockerfile
 /.gitignore
 /.gitignore
 /.github
 ./.git/logs
-./inputs
+./inputs*
 *.ipynb
 /.ipynb_checkpoints
 /jupyter_notebooks
@@ -31,9 +28,3 @@ tmp
 /.vscode
 *.zip
 /.slugignore
-./inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew
-./inputs/cherryleaves_dataset/cherry-leaves/test/healthy
-./inputs/cherryleaves_dataset/cherry-leaves/test
- ./inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew
- ./inputs/cherryleaves_dataset/cherry-leaves/train/healthy
- ./inputs/cherryleaves_dataset/cherry-leaves/train
