Adjust gitignore and sluignore files

--- a/.slugignore
+++ b/.slugignore
@@ -3,10 +3,15 @@
 /app_pages
 /documentation
 /.devcontainer
+/.gitpod.dockerfile
+/.gitignore
+/.github
 /inputs
+*.ipynb
 /.ipynb_checkpoints
 /jupyter_notebooks
 /kaggle.json
+node_modules/
 *.psd
 *.pdf
 *.pyc
@@ -15,6 +20,22 @@
 /src/__pycache__
 /.Trash-1000
 /.theia
+tmp...
 /.vscode
 *.zip
 /.slugignore
+
+core.Microsoft*
+core.mongo*
+core.python*
+env.py
+__pycache__/
+*.py[cod]
+node_modules/
+.github/
+cloudinary_python.txt
+kaggle.json
+inputs/cherryleaves_dataset/cherry-leaves/train
+inputs/cherryleaves_dataset/cherry-leaves/test
+log
+tmp
