--- a/.slugignore
+++ b/.slugignore
@@ -26,7 +26,7 @@ tmp...
 /.slugignore
 assets/streamlit_app_images
 jupyter_notebooks/.ipynb_checkpoints
-
+/outputs
 core.Microsoft*
 core.mongo*
 core.python*
