--- a/.slugignore
+++ b/.slugignore
@@ -1,43 +1,17 @@
-# cat .slugignore
-/assets
-/app_pages
-/documentation
-/.devcontainer
-/.gitpod.dockerfile
-/.gitignore
-/.github
-/inputs
-*.ipynb
-/.ipynb_checkpoints
-/jupyter_notebooks
-/kaggle.json
-node_modules/
-*.psd
-*.pdf
-*.pyc
-*.pyo
-/README.md
-/src/__pycache__
-/.Trash-1000
-/.theia
-tmp...
-/.vscode
-*.zip
-/.slugignore
-assets/streamlit_app_images
-jupyter_notebooks/.ipynb_checkpoints
-/outputs
 core.Microsoft*
 core.mongo*
 core.python*
 env.py
-__pycache__/
-*.py[cod]
-node_modules/
-.github/
-cloudinary_python.txt
 kaggle.json
-inputs/cherryleaves_dataset/cherry-leaves/train
-inputs/cherryleaves_dataset/cherry-leaves/test
-log
-tmp
+README.md
+inputs/cherry_leaves_dataset/cherry-leaves/train/healthy/*
+inputs/cherry_leaves_dataset/cherry-leaves/train/powdery_mildew/*
+inputs/cherry_leaves_dataset/cherry-leaves/test/healthy/*
+inputs/cherry_leaves_dataset/cherry-leaves/test/powdery_mildew/*
+jupyter_notebooks/**
+documentation/*
+outputs/*
+app_pages/__pycache__
+src/__pycache__
+machine_learning/__pycache__
+*.ipynb
