--- a/.slugignore
+++ b/.slugignore
@@ -4,13 +4,45 @@ core.python*
 env.py
 kaggle.json
 README.md
-inputs/cherry_leaves_dataset/cherry-leaves/train/healthy/*
-inputs/cherry_leaves_dataset/cherry-leaves/train/powdery_mildew/*
-inputs/cherry_leaves_dataset/cherry-leaves/test/healthy/*
-inputs/cherry_leaves_dataset/cherry-leaves/test/powdery_mildew/*
-jupyter_notebooks/**
-documentation/*
-app_pages/__pycache__
-src/__pycache__
-machine_learning/__pycache__
+inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
+inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
+
+/assets
+/app_pages
+/documentation
+/.devcontainer
+/.gitpod.dockerfile
+/.gitignore
+/.github
+/inputs
 *.ipynb
+/.ipynb_checkpoints
+/jupyter_notebooks
+/kaggle.json
+node_modules/
+*.psd
+*.pdf
+*.pyc
+*.pyo
+/src/__pycache__
+/.Trash-1000
+/.theia
+tmp...
+/.vscode
+*.zip
+/.slugignore
+assets/streamlit_app_images
+jupyter_notebooks/.ipynb_checkpoints
+core.Microsoft*
+core.mongo*
+core.python*
+env.py
+__pycache__/
+*.py[cod]
+node_modules/
+.github/
+cloudinary_python.txt
+log
+tmp
