--- a/.slugignore
+++ b/.slugignore
@@ -33,8 +33,8 @@ tmp
 /.vscode
 *.zip
 /.slugignore
-assets/streamlit_app_images
-jupyter_notebooks/.ipynb_checkpoints
+/assets/streamlit_app_images
+/jupyter_notebooks/.ipynb_checkpoints
 core.Microsoft*
 core.mongo*
 core.python*
@@ -48,4 +48,15 @@ log
 tmp
 /inputs/cherryleaves_dataset/cherry-leaves/healthy
 /inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
+inputs
+
+
+/README.md
+/app_pages
+/assets
+
+
+/jupyter_notebooks/.ipynb_checkpoints
+/jupyter_notebooks
+
 
