reset slugignore file

--- a/.slugignore
+++ b/.slugignore
@@ -1,60 +1,16 @@
-core.Microsoft*
-core.mongo*
-core.python*
-env.py
-/kaggle.json
-/inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
-/inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
-/inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
-/inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
 
-/assets/*
-/app_pages/*
-/documentation/*
-/.devcontainer/*
-/.gitpod.dockerfile
-/.gitignore
-/.github/*
-/inputs/*
-*.ipynb
-/.ipynb_checkpoints
-/jupyter_notebooks
-/kaggle.json
-node_modules/
-*.psd
-*.pdf
-*.pyc
-*.pyo
-/src/__pycache__
+inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
+inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
+
+attachments/*
+README.md
+.gitpod.dockerfile
+.gitpod.yml
+app_pages/__pycache__/*
+/assets
+/documentation
+/.devcontainer
 /.Trash-1000
 /.theia
-tmp
-/.vscode
-*.zip
-/.slugignore
-/assets/streamlit_app_images
-/jupyter_notebooks/.ipynb_checkpoints
-core.Microsoft*
-core.mongo*
-core.python*
-/env.py
-__pycache__/
-*.py[cod]
-/node_modules/*
-/.github/
-cloudinary_python.txt
-log
-tmp
-/inputs/cherryleaves_dataset/cherry-leaves/healthy
-/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
-/inputs
-
-
-/README.md
-/app_pages
-/assets
-
- ./.git/logs
-/jupyter_notebooks/.ipynb_checkpoints
-/jupyter_notebooks
-
