--- a/.slugignore
+++ b/.slugignore
@@ -1,20 +1,27 @@
-
+/inputs/cherryleaves_dataset/cherry-leaves/healthy
+/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
 inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
 inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
 assets
+app_pages/__pycache__/*
 attachments/*
 jupyter_notebooks
-README.md
+
 .gitpod.dockerfile
 .gitpod.yml
-app_pages/__pycache__/*
-/assets
+ ./.git/logs
 /documentation
 /.devcontainer
+README.md
 /.Trash-1000
 /.theia
 /.ipynb_checkpoints
-/inputs/cherryleaves_dataset/cherry-leaves/healthy
-/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
+/kaggle.json
+node_modules/
+*.psd
+*.pdf
+*.pyc
+*.pyo
+/src/__pycache__
