--- a/.slugignore
+++ b/.slugignore
@@ -1,5 +1,5 @@
-/inputs/cherryleaves_dataset/cherry-leaves/healthy
-/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
+inputs/cherryleaves_dataset/cherry-leaves/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew/*
 inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
 inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
@@ -11,17 +11,19 @@ jupyter_notebooks
 
 .gitpod.dockerfile
 .gitpod.yml
- ./.git/logs
+.git/logs
 /documentation
-/.devcontainer
+.devcontainer
 README.md
-/.Trash-1000
-/.theia
-/.ipynb_checkpoints
-/kaggle.json
+.Trash-1000
+.theia
+.ipynb_checkpoints
+kaggle.json
 node_modules/
 *.psd
 *.pdf
 *.pyc
 *.pyo
 /src/__pycache__
+*.ipynb
+node_modules/
