--- a/.slugignore
+++ b/.slugignore
@@ -1,29 +1,52 @@
+
 inputs/cherryleaves_dataset/cherry-leaves/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew/*
 inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
 inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
-assets
-app_pages/__pycache__/*
-attachments/*
-jupyter_notebooks
-
-.gitpod.dockerfile
-.gitpod.yml
-.git/logs
-/documentation
-.devcontainer
-README.md
-.Trash-1000
-.theia
-.ipynb_checkpoints
-kaggle.json
+/assets/*
+/documentation/*
+./.devcontainer/build-assets
+./.devcontainer
+/.gitpod.dockerfile
+/.gitignore
+/.github/*
+/inputs/*
+*.ipynb
+/.ipynb_checkpoints
+/jupyter_notebooks
+/kaggle.json
 node_modules/
 *.psd
 *.pdf
 *.pyc
 *.pyo
 /src/__pycache__
-*.ipynb
-node_modules/
+./.Trash-1000/info
+./.Trash-1000/files
+./.theia
+tmp
+/.vscode
+*.zip
+/.slugignore
+/assets/streamlit_app_images
+/jupyter_notebooks/.ipynb_checkpoints
+core.Microsoft*
+core.mongo*
+core.python*
+/env.py
+__pycache__/
+*.py[cod]
+/node_modules/*
+./.github/
+cloudinary_python.txt
+log
+tmp
+/inputs/cherryleaves_dataset/cherry-leaves/healthy
+/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
+/inputs
+/README.md
+/assets
+./.git/logs
+/jupyter_notebooks
