--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-numpy==1.19.2
+# numpy==1.19.2
+numpy==1.19.0
 pandas==1.1.2
 matplotlib==3.3.1
 seaborn==0.11.0
@@ -8,3 +9,5 @@ streamlit==0.85.0
 
 scikit-learn==0.24.2
 tensorflow-cpu==2.6.0
+
+protobuf==3.20.0
