--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-# numpy==1.19.2
-numpy==1.19.0
-pandas==1.1.2
-matplotlib==3.3.1
-seaborn==0.11.0
-plotly==4.12.0
+numpy
+pandas
+matplotlib
+seaborn
+plotly
 
-streamlit==0.85.0
+streamlit
 
-scikit-learn==0.24.2
-tensorflow-cpu==2.6.0
+scikit-learn
+tensorflow-cpu
+keras
+protobuf
 
-protobuf==3.20.0
+keras
+altair
