--- a/.slugignore
+++ b/.slugignore
@@ -65,3 +65,4 @@ tmp
 ./inputs/cherryleaves_dataset/cherry-leaves/test
 ./inputs/cherryleaves_dataset/cherry-leaves/cherry-leaves
 ./inputs/cherryleaves_dataset/cherry-leaves/train
+./inputs/cherryleaves_dataset/cherry-leaves/validation
