--- a/.slugignore
+++ b/.slugignore
@@ -11,4 +11,24 @@
 ./inputs/cherryleaves_dataset/cherry-leaves/test
 ./inputs/cherryleaves_dataset/cherry-leaves/cherry-leaves
 ./inputs/cherryleaves_dataset/cherry-leaves/train
-./inputs/cherryleaves_dataset/cherry-leaves/validation
+
+/assets/*
+/documentation/*
+./.devcontainer/build-assets
+./.devcontainer
+/.gitpod.dockerfile
+/.gitignore
+/.github/*
+*.ipynb
+/jupyter_notebooks
+/kaggle.json
+node_modules/
+*.psd
+*.pdf
+*.pyc
+*.pyo
+/src/__pycache__
+./.Trash-1000/info
+./.Trash-1000/files
+./.theia
+tmp
