remove files from slug

--- a/.slugignore
+++ b/.slugignore
@@ -8,11 +8,10 @@
 ./.ipynb_checkpoints
 ./.git
 ./assets
-./inputs/cherryleaves_dataset/cherry-leaves/test
-./inputs/cherryleaves_dataset/cherry-leaves/cherry-leaves
-./inputs/cherryleaves_dataset/cherry-leaves/train
+
 
 /assets/*
+/assets/streamlit_app_images
 /documentation/*
 ./.devcontainer/build-assets
 ./.devcontainer
@@ -32,3 +31,34 @@ node_modules/
 ./.Trash-1000/files
 ./.theia
 tmp
+inputs/cherryleaves_dataset/cherry-leaves/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew/*
+inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
+inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
+*.zip
+/.slugignore
+
+/jupyter_notebooks/.ipynb_checkpoints
+core.Microsoft*
+core.mongo*
+core.python*
+/env.py
+__pycache__/
+*.py[cod]
+/node_modules/*
+./.github/
+cloudinary_python.txt
+log
+tmp
+/inputs/cherryleaves_dataset/cherry-leaves/healthy
+/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
+/README.md
+/assets
+./.git/logs
+/jupyter_notebooks
+/inputs
+./.git/info
+./.ipynb_checkpoints
+./app_pages
