--- a/.slugignore
+++ b/.slugignore
@@ -1,62 +1,52 @@
 
 ./app_pages
-./.Trash-1000
-./.devcontainer
-./jupyter_notebooks
-./.theia
-./.github
-./.ipynb_checkpoints
-./.git
 ./assets
-/assets/*
 /assets/streamlit_app_images
+core.Microsoft*
+core.mongo*
+core.python*
+cloudinary_python.txt
+./.devcontainer
 /documentation/*
 ./.devcontainer/build-assets
 ./.devcontainer
+Dockerfile
+/env.py
+./.git
+./.github
 /.gitpod.dockerfile
 /.gitignore
 /.github/*
+./.github/
+./.git/logs
+./.git/info
+
+.gitpod.yml
+./.ipynb_checkpoints
 *.ipynb
-/jupyter_notebooks
-/kaggle.json
-node_modules/
-*.psd
-*.pdf
-*.pyc
-*.pyo
-/src/__pycache__
-./.Trash-1000/info
-./.Trash-1000/files
-./.theia
-tmp
 inputs/cherryleaves_dataset/cherry-leaves/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew/*
 inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
 inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
 inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
-*.zip
-/.slugignore
-
+/jupyter_notebooks
 /jupyter_notebooks/.ipynb_checkpoints
-core.Microsoft*
-core.mongo*
-core.python*
-/env.py
+/kaggle.json
+large_dataset/
+/node_modules/*
+/outputs/v1/labels_distribution.png
+*.psd
+*.pdf
+*.pyc
+*.pyo
 __pycache__/
 *.py[cod]
-/node_modules/*
-./.github/
-cloudinary_python.txt
-log
-tmp
-/inputs/cherryleaves_dataset/cherry-leaves/healthy
-/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
 /README.md
-/assets
-./.git/logs
-/jupyter_notebooks
-/inputs
-./.git/info
-./.ipynb_checkpoints
-/outputs/v1/labels_distribution.png
+/src/__pycache__
+/.slugignore
+./.theia
+./.Trash-1000
+tmp
+/.vscode
+*.zip
