--- a/.slugignore
+++ b/.slugignore
@@ -1,52 +1,55 @@
-
-./app_pages
-./assets
-/assets/streamlit_app_images
 core.Microsoft*
 core.mongo*
 core.python*
-cloudinary_python.txt
-./.devcontainer
+env.py
+/kaggle.json
+/inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
+/inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
+/inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
+/inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
+
+/assets/*
+/app_pages/*
 /documentation/*
-./.devcontainer/build-assets
-./.devcontainer
-Dockerfile
-/env.py
-./.git
-./.github
+/.devcontainer/*
 /.gitpod.dockerfile
 /.gitignore
 /.github/*
-./.github/
-./.git/logs
-./.git/info
-
-.gitpod.yml
-./.ipynb_checkpoints
+/inputs/*
 *.ipynb
-inputs/cherryleaves_dataset/cherry-leaves/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew/*
-inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
-inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
-inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
+/.ipynb_checkpoints
 /jupyter_notebooks
-/jupyter_notebooks/.ipynb_checkpoints
 /kaggle.json
-large_dataset/
-/node_modules/*
-/outputs/v1/labels_distribution.png
+node_modules/
 *.psd
 *.pdf
 *.pyc
 *.pyo
-__pycache__/
-*.py[cod]
-/README.md
 /src/__pycache__
-/.slugignore
-./.theia
-./.Trash-1000
+/.Trash-1000
+/.theia
 tmp
 /.vscode
 *.zip
+/.slugignore
+/assets/streamlit_app_images
+/jupyter_notebooks/.ipynb_checkpoints
+core.Microsoft*
+core.mongo*
+core.python*
+/env.py
+__pycache__/
+*.py[cod]
+/node_modules/*
+/.github/
+cloudinary_python.txt
+log
+tmp
+/inputs/cherryleaves_dataset/cherry-leaves/healthy
+/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
+/inputs
+/README.md
+/assets
+./.git/logs
+/jupyter_notebooks/.ipynb_checkpoints
+/jupyter_notebooks
