--- a/.slugignore
+++ b/.slugignore
@@ -1,79 +1,50 @@
 app_pages/__pycache__/*
+/app_pages/*
+/assets/*
+/assets/streamlit_app_images
 attachments/*
-/assets
-/documentation
-/.devcontainer
-.gitpod.yml
-.gitpod.dockerfile
-/.gitignore
-.gitpod.dockerfile
-.gitpod.yml
-.gitpod.dockerfile
-/inputs
-/.ipynb_checkpoints
-/jupyter_notebooks
-kaggle.json
-README.md
-*.psd
-*.pdf
-/src/__pycache__
-/.theia
-/.Trash-1000
-*.zip
+cloudinary_python.txt
 core.Microsoft*
 core.mongo*
 core.python*
-env.py
-/kaggle.json
-/inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
-/inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
-/inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
-/inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
-
-/assets/*
-/attachments/*
-/app_pages/*
-/documentation/*
 /.devcontainer/*
+/documentation/*
 ./.devcontainer/build-assets
-/.gitpod.dockerfile
-/.gitignore
+env.py
+.gitpod.dockerfile
+.gitpod.yml
 /.github/*
-/inputs/*
+/.gitignore
+/.gitpod.dockerfile
+./.git/logs
+./.git/info
 *.ipynb
 /.ipynb_checkpoints
+/inputs/*
+/inputs/cherryleaves_dataset/cherry-leaves/healthy
+/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
+/inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
+/inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
+/inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
+/inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
 /jupyter_notebooks
+/jupyter_notebooks/.ipynb_checkpoints
 /kaggle.json
+log
 node_modules/
-*.psd
+/node_modules/*
+/README.md
+__pycache__/
+pyenv
 *.pdf
+*.psd
+*.py[cod]
 *.pyc
 *.pyo
 /src/__pycache__
-/.Trash-1000
+/.slugignore
 /.theia
+/.Trash-1000
 tmp
 /.vscode
 *.zip
-/.slugignore
-/assets/streamlit_app_images
-/jupyter_notebooks/.ipynb_checkpoints
-core.Microsoft*
-core.mongo*
-core.python*
-/env.py
-__pycache__/
-*.py[cod]
-/node_modules/*
-/.github/
-cloudinary_python.txt
-log
-tmp
-/inputs/cherryleaves_dataset/cherry-leaves/healthy
-/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
-/inputs
-/README.md
-/assets
-./.git/logs
-/jupyter_notebooks/.ipynb_checkpoints
-/jupyter_notebooks
