Amend slugignore file

--- a/.slugignore
+++ b/.slugignore
@@ -1,50 +1,10 @@
-app_pages/__pycache__/*
-/app_pages/*
-/assets/*
-/assets/streamlit_app_images
+inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
+inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
+inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
 attachments/*
-cloudinary_python.txt
-core.Microsoft*
-core.mongo*
-core.python*
-/.devcontainer/*
-/documentation/*
-./.devcontainer/build-assets
-env.py
+readme_images/*
+README.md
 .gitpod.dockerfile
 .gitpod.yml
-/.github/*
-/.gitignore
-/.gitpod.dockerfile
-./.git/logs
-./.git/info
-*.ipynb
-/.ipynb_checkpoints
-/inputs/*
-/inputs/cherryleaves_dataset/cherry-leaves/healthy
-/inputs/cherryleaves_dataset/cherry-leaves/powdery_mildew
-/inputs/cherryleaves_dataset/cherry-leaves/test/healthy/*
-/inputs/cherryleaves_dataset/cherry-leaves/test/powdery_mildew/*
-/inputs/cherryleaves_dataset/cherry-leaves/train/healthy/*
-/inputs/cherryleaves_dataset/cherry-leaves/train/powdery_mildew/*
-/jupyter_notebooks
-/jupyter_notebooks/.ipynb_checkpoints
-/kaggle.json
-log
-node_modules/
-/node_modules/*
-/README.md
-__pycache__/
-pyenv
-*.pdf
-*.psd
-*.py[cod]
-*.pyc
-*.pyo
-/src/__pycache__
-/.slugignore
-/.theia
-/.Trash-1000
-tmp
-/.vscode
-*.zip
+app_pages/__pycache__/*
